--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: jiro4989/setup-nim-action@v1
         with:
-          nim-version: '1.6.0'
-      - run: nimble test -y
+          nim-version: '1.6.12'
+      - run: "testament all --megatest: off"
